--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
     --popover: 228 9% 11%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 252 100% 69%;
+    --primary: 150 70.5% 45;
     --primary-foreground: 0 0% 100%;
 
     --secondary: 228 6% 16%;
