--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
     --popover-foreground: 210 40% 98%;
 
     --primary: 150 70.5% 45;
+    --third: 150 70.5% 45;
     --primary-foreground: 0 0% 100%;
 
     --secondary: 228 6% 16%;
